--- a/project-item/style.css
+++ b/project-item/style.css
@@ -1,5 +1,5 @@
-@import '/css/base/fonts.css';
-@import '/css/base/variables.css';
-@import '/css/blocks/timestamp.css';
-@import '/css/blocks/element.css';
-@import '/css/blocks/extra-options.css';
+@import '../css/base/fonts.css';
+@import '../css/base/variables.css';
+@import '../css/blocks/timestamp.css';
+@import '../css/blocks/element.css';
+@import '../css/blocks/extra-options.css';
